--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "getting-started-with-redux-dan-abramov",
+  "homepage": "https://ktrygub.github.io/getting-started-with-redux-by-dan-abramov/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint": "^4.11.0",
@@ -28,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.5.1",
+    "gh-pages": "^1.1.0",
     "prettier": "^1.8.2"
   }
 }
